--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Gracias totales</title>
-  <link href="./main.css" rel="stylesheet"></head>
+    <title><%= htmlWebpackPlugin.options.title %></title>
+  </head>
   <body>
     <header>
-      <h1>¡Gracias totales!</h1>
+      <h1><%= htmlWebpackPlugin.options.title %></h1>
     </header>
     <main>
       <p>
@@ -48,5 +48,5 @@
     <div>
       pedro
     </div>
-  <script type="text/javascript" src="./main.js"></script></body>
+  </body>
 </html>
