Refactor notebook style

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,12 @@
         <p>
           See you at The Avalon, 16 Balham Hill, Balham, London SW12 9EB, on
           Saturday, July 20 starting at 2:00 PM. RSVP
+          <picture id="js-map" class="map">
+            <!-- <img
+              src="https://maps.googleapis.com/maps/api/staticmap?center=london&zoom=12&scale=2&size=1280x840&maptype=roadmap&key=AIzaSyBum8HUlhV6EPKJQVzxLeWkNfpHNivlYjc&format=jpg&visual_refresh=true"
+              alt="Google Map of london"
+            /> -->
+          </picture>
         </p>
       </section>
       <section id="rsvp">
