--- a/src/index.html
+++ b/src/index.html
@@ -14,32 +14,34 @@
     </header>
     <main>
       <section id="gracias">
-        <h1><%= htmlWebpackPlugin.options.title %></h1>
-        <p>
-          The last 365 days have been full of challenges, obstacles,
-          opportunities and blessings for us, the Martín Blanco:
-        </p>
-        <ul>
-          <li>
-            We moved to another house
-          </li>
-          <li>
-            Miranda was born and left the hospital after 13 days.
-          </li>
-          <li>
-            Peter started a new nursery
-          </li>
-          <li>
-            Anita started and finished a new role.
-          </li>
-          <li>
-            Pedro was promoted to instructor in General Assembly
-          </li>
-        </ul>
-        <p>
-          The above would not have been possible without your help, love and
-          support. That's why we want to invite you to celebrate with us:
-        </p>
+        <div>
+          <h1><%= htmlWebpackPlugin.options.title %></h1>
+          <p>
+            The last 365 days have been full of challenges, obstacles,
+            opportunities and blessings for us, the Martín Blanco:
+          </p>
+          <ul>
+            <li>
+              We moved to another house
+            </li>
+            <li>
+              Miranda was born and left the hospital after 13 days.
+            </li>
+            <li>
+              Peter started a new nursery
+            </li>
+            <li>
+              Anita started and finished a new role.
+            </li>
+            <li>
+              Pedro was promoted to instructor in General Assembly
+            </li>
+          </ul>
+          <p>
+            The above would not have been possible without your help, love and
+            support. That's why we want to invite you to celebrate with us:
+          </p>
+        </div>
       </section>
       <section id="location">
         <h2>Location</h2>
