--- a/src/index.html
+++ b/src/index.html
@@ -44,17 +44,14 @@
         </div>
       </section>
       <section id="location">
-        <h2>Location</h2>
-        <p>
-          See you at The Avalon, 16 Balham Hill, Balham, London SW12 9EB, on
-          Saturday, July 20 starting at 2:00 PM. RSVP
-          <picture id="js-map" class="map">
-            <!-- <img
-              src="https://maps.googleapis.com/maps/api/staticmap?center=london&zoom=12&scale=2&size=1280x840&maptype=roadmap&key=AIzaSyBum8HUlhV6EPKJQVzxLeWkNfpHNivlYjc&format=jpg&visual_refresh=true"
-              alt="Google Map of london"
-            /> -->
-          </picture>
-        </p>
+        <div>
+          <h2>Location</h2>
+          <p>
+            See you at The Avalon, 16 Balham Hill, Balham, London SW12 9EB, on
+            Saturday, July 20 starting at 2:00 PM. RSVP
+          </p>
+          <div id="js-map" class="map"></div>
+        </div>
       </section>
       <section id="rsvp">
         <h2>RSVP</h2>
@@ -72,5 +69,8 @@
         </ul>
       </menu>
     </main>
+    <!-- async
+    defer -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBum8HUlhV6EPKJQVzxLeWkNfpHNivlYjc"></script>
   </body>
 </html>
