refresh google api token and patch event

--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,13 @@
           <h1><%= htmlWebpackPlugin.options.title %></h1>
           <p>
             The last 365 days have been full of challenges, obstacles,
-            opportunities and blessings for us, the Martín Blanco:
+            opportunities and blessings for us, the Martín Blanco family:
           </p>
           <ul>
             <li>
-              <mark class="highlight-blue">We moved to another house 🚌🏡</mark>
+              <mark class="highlight-blue"
+                >We moved in to another house 🚌🏡</mark
+              >
             </li>
             <li>
               <mark class="highlight-red"
