capture email value

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,13 @@
       </section>
       <section id="rsvp">
         <h2>RSVP</h2>
-        <button>RSVP</button>
+        <form id="js-form">
+          <label for="email">
+            Email
+          </label>
+          <input type="email" name="email" id="email" required />
+          <input type="submit" value="RSVP" />
+        </form>
       </section>
       <menu>
         <ul>
