Handling success, failure and validation classes

--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
           </div>
         </div>
         <p class="down-button animated infinite slideInDown">
-          <a href="#" class="js-down-button" data-section="location">⏬</a>
+          <a href="#" class="js-down-button" data-section="rsvp">⏬</a>
         </p>
       </section>
       <section id="rsvp">
