--- a/src/index.html
+++ b/src/index.html
@@ -97,20 +97,20 @@
       <section id="rsvp">
         <h2>RSVP</h2>
         <form id="js-form">
-          <span class="input input--hoshi">
-            <input
-              class="input__field input__field--hoshi"
-              type="email"
-              id="email"
-            />
-            <label class="input__label input__label--hoshi" for="email">
-              <span class="input__label-content input__label-content--hoshi"
-                >Email</span
-              >
+          <span class="input">
+            <input class="input__field" type="email" id="email" />
+            <label class="input__label" for="email">
+              <span class="input__label-content">Email</span>
             </label>
           </span>
           <input type="submit" value="RSVP" class="form__button" />
         </form>
+        <!-- <form id="js-form" class="form">
+          <label for="email">Email </label>
+          <input type="email" id="email" />
+          <span></span>
+          <input type="submit" value="RSVP" />
+        </form> -->
       </section>
       <menu>
         <ul>
