--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
       </section>
       <section id="rsvp">
         <h2>RSVP</h2>
-        <form id="js-form">
+        <!-- <form id="js-form">
           <span class="input">
             <input class="input__field" type="email" id="email" />
             <label class="input__label" for="email">
@@ -104,13 +104,15 @@
             </label>
           </span>
           <input type="submit" value="RSVP" class="form__button" />
-        </form>
-        <!-- <form id="js-form" class="form">
-          <label for="email">Email </label>
-          <input type="email" id="email" />
-          <span></span>
-          <input type="submit" value="RSVP" />
         </form> -->
+        <form id="js-form" class="form">
+          <label for="email">Email </label>
+          <span>
+            <input type="email" id="email" />
+            <span></span>
+          </span>
+          <input type="submit" value="RSVP" />
+        </form>
       </section>
       <menu>
         <ul>
