Render guest update state

--- a/src/index.html
+++ b/src/index.html
@@ -104,6 +104,9 @@
           </span>
           <input type="submit" value="RSVP" />
         </form>
+        <footer class="rsvp-footer">
+          <p id="js-rsvp-message"></p>
+        </footer>
       </section>
       <menu>
         <ul>
