--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
@@ -85,6 +86,11 @@
             <p>
               Please RSVP 🙏🏻
             </p>
+            <aside>
+              <p>
+                Please bring your +1 and kids
+              </p>
+            </aside>
           </div>
           <div class="column">
             <div id="js-map" class="map"></div>
