Add label to map markers

--- a/src/index.html
+++ b/src/index.html
@@ -84,13 +84,11 @@
               on Saturday, July 20 starting at 2:00 PM.
             </time>
             <p>
+              Bring your +1 and kids
+            </p>
+            <p>
               Please RSVP 🙏🏻
             </p>
-            <aside>
-              <p>
-                Please bring your +1 and kids
-              </p>
-            </aside>
           </div>
           <div class="column">
             <div id="js-map" class="map"></div>
